working with grunt (common and countries)

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.13.0",
     "ftp": "^0.3.10",
     "glob": "^7.0.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-requirejs": "^1.0.0",
     "i18n": "0.8.1",
     "i18n-node-angular": "^1.4.0",
     "lodash": "4.6.1",
@@ -31,6 +33,7 @@
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.69.0",
+    "requirejs": "^2.3.2",
     "rwlock": "^5.0.0",
     "sequelize": "^3.23.4",
     "sequelize-cli": "^2.3.1",
