--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "ftp": "^0.3.10",
     "glob": "^7.0.3",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-requirejs": "^1.0.0",
