--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "i18n": "0.8.1",
     "i18n-node-angular": "^1.4.0",
     "lodash": "4.6.1",
