--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "jquery": "^2.2.4",
-    "angular": ">=1.5.8",
+    "angular": "~1.6.0",
     "angular-schema-form": "^0.8.13",
     "jquery-ui": "jqueryui#^1.12.1",
     "angular-tree-control": "^0.2.28",
