--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.0-alpha6",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "grunt && node ./bin/www",
     "test": "mocha --timeout 5000 tests"
   },
   "dependencies": {
