--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -34,7 +34,7 @@ npm install grunt -g
 # Check if pm2 is already installed
 npm list pm2 -g
 ret = $?
-if [[ $rc != 0 ]]; then
+if [[ ret != 0 ]]; then
   # Install pm2
   npm install pm2 -g
   # Allows the service to start with the system
