--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -33,8 +33,8 @@ npm install grunt -g
 
 # Check if pm2 is already installed
 npm list pm2 -g
-ret = $?
-if [[ ret != 0 ]]; then
+ret=$?
+if [[ ${ret} != 0 ]]; then
   # Install pm2
   npm install pm2 -g
   # Allows the service to start with the system
