--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,9 @@
     "start": "grunt && node ./bin/www",
     "test": "mocha --timeout 5000 tests"
   },
+  "bin": {
+    "webapp-stop": "./bin/webapp-stop"
+  },
   "dependencies": {
     "async": "^2.0.0-rc.6",
     "bcrypt": "^0.8.5",
@@ -42,6 +45,7 @@
     "sequelize-cli": "^2.3.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7",
+    "socket.io-client": "^1.7.2",
     "ssh2": "^0.5.0",
     "swig": "1.4.2",
     "winston": "^2.3.0"
