--- a/scripts/postrm.in
+++ b/scripts/postrm.in
@@ -23,10 +23,42 @@ import json
 import psycopg2
 import sys
 import shutil
+
 #
-# On purge remove the TerraMA2 database
+# On remove: remove NodeJs dependencies
 #
 arg = sys.argv[1]
+if arg == 'remove':
+    #
+    # Remove NodeJs dependencies folder
+    #
+    path = "@TERRAMA2_DESTINATION@webapp/node_modules"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+    path = "@TERRAMA2_DESTINATION@webapp/bower_components"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+
+    path = "@TERRAMA2_DESTINATION@webmonitor/node_modules"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+    path = "@TERRAMA2_DESTINATION@webmonitor/bower_components"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+
+    path = "@TERRAMA2_DESTINATION@webcomponents/node_modules"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+    path = "@TERRAMA2_DESTINATION@webcomponents/dist"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+    path = "@TERRAMA2_DESTINATION@webcomponents/docs"
+    if os.path.isfile(path):
+        shutil.rmtree(path, ignore_errors=True, onerror=None)
+
+#
+# On purge remove the TerraMA2 database and terrama2 folder
+#
 if arg == 'purge':
     config = '@TERRAMA2_DESTINATION@webapp/config/config.terrama2'
     if os.path.isfile(config):
