--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -62,7 +62,7 @@ fi
 # Add webapp to pm2 startup
 (
   cd @TERRAMA2_DESTINATION@webapp
-  pm2 start bin/www --name webapp
+  pm2 start npm --name webapp -- start
   valid $? "Error executing webapp."
   pm2 save
   valid $? "Error saving pm2 state."
@@ -71,7 +71,7 @@ fi
 # Add webmonitor to pm2 startup
 (
   cd @TERRAMA2_DESTINATION@webmonitor
-  pm2 start bin/www --name webmonitor
+  pm2 start npm --name webmonitor -- start
   valid $? "Error executing webmonitor."
   pm2 save
   valid $? "Error saving pm2 state."
