Angular ui select dependencie

--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -33,7 +33,8 @@
     "AdminLTE": "admin-lte#2.3.0",
     "angular-color-picker": "angularjs-color-picker#^2.5.0",
     "angular-eonasdan-datetimepicker": "^0.3.8",
-    "almond": "^0.3.3"
+    "almond": "^0.3.3",
+    "angular-ui-select": "^0.19.6"
   },
   "resolutions": {
     "angular": ">= 1.5.8"
