--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
+    "clone": "^2.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
