--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -34,7 +34,8 @@
     "angular-color-picker": "angularjs-color-picker#^2.5.0",
     "angular-eonasdan-datetimepicker": "^0.3.8",
     "almond": "^0.3.3",
-    "angular-ui-select": "^0.19.6"
+    "angular-ui-select": "^0.19.6",
+    "angular-material": "^1.1.4"
   },
   "resolutions": {
     "angular": ">= 1.5.8"
