--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -12,7 +12,12 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-load": "^1.1.15",
+    "express-session": "^1.15.3",
+    "express-socket.io-session": "^1.3.2",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8",
     "swig": "1.4.2",
