--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -9,6 +9,8 @@ function valid()
   fi
 }
 
+echo "Post-installation script..."
+
 #
 # Install web dependencies
 #
@@ -17,6 +19,7 @@ npm install bower -g
 npm install grunt -g
 
 (
+  echo "Webapp dependencies..."
   cd @TERRAMA2_DESTINATION@webapp
   npm install
   valid $? "Unable to install NodeJs dependencies."
@@ -29,6 +32,7 @@ npm install grunt -g
 )
 
 (
+  echo "Webcomponents dependencies..."
   cd @TERRAMA2_DESTINATION@webcomponents
   npm install
   valid $? "Unable to install NodeJs dependencies."
@@ -37,6 +41,7 @@ npm install grunt -g
 )
 
 (
+  echo "Webmonitor dependencies..."
   cd @TERRAMA2_DESTINATION@webmonitor
   npm install
   valid $? "Unable to install NodeJs dependencies."
@@ -51,6 +56,7 @@ npm install grunt -g
 # Check if pm2 is already installed
 npm list pm2 -g
 if [ $? != 0 ]; then
+  echo "Configuring pm2..."
   # Install pm2
   npm install pm2 -g
   pm2 install pm2-logrotate
@@ -77,5 +83,7 @@ fi
   pm2 save
   valid $? "Error saving pm2 state."
 )
+
+echo "End post-installation script..."
 
 exit 0
