--- a/webmonitor/bower.json
+++ b/webmonitor/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "1.5.x",
     "angular-route": "1.5.x",
+    "datatables": "^1.10.12",
     "jquery": "2.1.4",
     "bootstrap": "^3.3.7",
     "AdminLTE": "admin-lte#^2.3.6",
