--- a/webmonitor/bower.json
+++ b/webmonitor/bower.json
@@ -22,6 +22,7 @@
     "jquery-ui": "^1.12.1",
     "ol3": "ol3-bower#^3.18.2",
     "moment": "^2.15.1",
-    "bootstrap-daterangepicker": "^2.1.24"
+    "bootstrap-daterangepicker": "^2.1.24",
+    "almond": "^0.3.3"
   }
 }
