--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -22,5 +22,15 @@
     "socket.io": "^1.4.8",
     "swig": "1.4.2",
     "xml2js": "^0.4.17"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-banner": "^0.6.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-jsdoc": "^2.1.0",
+    "jsdoc": "^3.4.0",
+    "requirejs": "^2.2.0"
   }
 }
