--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -47,6 +47,8 @@ npm install grunt -g
   valid $? "Unable to install NodeJs dependencies."
   bower install --allow-root
   valid $? "Unable to install Bower dependencies."
+  grunt
+  valid $? "Error executing grunt."
 )
 
 #
