--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
+    "child_process": "^1.0.2",
     "clone": "^2.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
@@ -22,6 +23,7 @@
     "express": "~4.13.1",
     "express-load": "^1.1.15",
     "express-session": "^1.13.0",
+    "fs": "0.0.1-security",
     "ftp": "^0.3.10",
     "glob": "^7.0.3",
     "grunt": "^1.0.1",
@@ -40,9 +42,11 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.5.1",
+    "pg-format": "^1.0.4",
     "pg-hstore": "^2.3.2",
     "request": "^2.69.0",
     "requirejs": "^2.3.2",
+    "rimraf": "^2.6.1",
     "sequelize": "^3.23.4",
     "sequelize-cli": "^2.3.1",
     "serve-favicon": "~2.3.0",
