alter webapp config file to webapp.config

--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -72,10 +72,10 @@ fi
 (
   cd @TERRAMA2_DESTINATION@webapp
 
-  if ! [ -f "config.terrama2" ]; then
-    cp sample_config.terrama2 config.terrama2
+  if ! [ -f "webapp.json" ]; then
+    cp sample_webapp.json webapp.json
   fi
-  
+
   pm2 start npm --name webapp -- start
   valid $? "Error executing webapp."
   pm2 save
@@ -85,6 +85,11 @@ fi
 # Add webmonitor to pm2 startup
 (
   cd @TERRAMA2_DESTINATION@webmonitor
+
+  if ! [ -f "monitor.json" ]; then
+    cp sample_monitor.json monitor.json
+  fi
+
   pm2 start npm --name webmonitor -- start
   valid $? "Error executing webmonitor."
   pm2 save
