--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ webapp/npm-debug*
 webapp/public/externals
 webapp/bower_components
 webapp/*_terrama2.log
+webapp/config/webapp.json
 webmonitor/node_modules
 webmonitor/public/external
 webmonitor/public/dist
