--- a/webcomponents/package.json
+++ b/webcomponents/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TerraMA2WebComponents",
-  "version": "4.0.0-beta3",
+  "version": "4.0.0-rc1",
   "private": true,
   "devDependencies": {
     "grunt": "^1.0.1",
