--- a/webapp/config/sample_webapp.json
+++ b/webapp/config/sample_webapp.json
@@ -2,7 +2,7 @@
   "default": {
     "basePath": "/",
     "port": 36000,
-    "defaultFilePath": "/home/<USER>/terrama2",
+    "defaultFilePath": "/var/lib/terrama2",
     "defaultExecutablePath": "/opt/terrama2/4.0.0/bin",
     "defaultExecutableName": "terrama2_service",
     "disablePDF": false,
