--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -71,7 +71,7 @@ fi
 # Create a terrama2 user
 # and default data folder
 (
-  adduser --system --no-create-home terrama2
+  adduser --system --no-create-home terrama2 --password terrama4
   mkdir -p /var/lib/terrama2/data
   chown terrama2:terrama2 /var/lib/terrama2 -R
 )
@@ -87,6 +87,10 @@ fi
     fi
   )
 
+  echo "\n\n------------------------------"
+  echo "To register the TerraMA2 as a service enter the 'terrama2' user password."
+  echo "If you didn't have a 'terrama2' user the password is 'terrama4'."
+  
   sudo -H -u terrama2 sudo pm2 start npm --name webapp -- start
   valid $? "Error executing webapp."
   sudo -H -u terrama2 sudo pm2 save
