--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -3,13 +3,12 @@
 function valid()
 {
   if [ $1 -ne 0 ]; then
-    echo $2
-    echo ""
+    printf "$2\n"
     exit 1
   fi
 }
 
-echo "Post-installation script..."
+printf "Post-installation script...\n"
 
 #
 # Install web dependencies
@@ -19,20 +18,20 @@ npm install bower -g
 npm install grunt -g
 
 (
-  echo "Webapp dependencies..."
+  printf "Webapp dependencies...\n"
   cd @TERRAMA2_DESTINATION@webapp
   npm install
   valid $? "Unable to install NodeJs dependencies."
   bower install --allow-root
   valid $? "Unable to install Bower dependencies."
   grunt
-  valid $? "Error executing grunt."
+  valid $? "Error executing grunt.\n"
 
   chmod +x bin/webapp-stop.js
 )
 
 (
-  echo "Webcomponents dependencies..."
+  printf "Webcomponents dependencies...\n"
   cd @TERRAMA2_DESTINATION@webcomponents
   npm install
   valid $? "Unable to install NodeJs dependencies."
@@ -41,7 +40,7 @@ npm install grunt -g
 )
 
 (
-  echo "Webmonitor dependencies..."
+  printf "Webmonitor dependencies...\n"
   cd @TERRAMA2_DESTINATION@webmonitor
   npm install
   valid $? "Unable to install NodeJs dependencies."
@@ -58,7 +57,7 @@ npm install grunt -g
 # Check if pm2 is already installed
 npm list pm2 -g
 if [ $? != 0 ]; then
-  echo "Configuring pm2..."
+  printf "Configuring pm2...\n"
   # Install pm2
   npm install pm2 -g
   pm2 install pm2-logrotate
@@ -87,15 +86,14 @@ fi
     fi
   )
 
-  echo "\n\n------------------------------"
-  echo "To register the TerraMA2 as a service enter the 'terrama2' user password."
-  echo "If you didn't have a 'terrama2' user the password is 'terrama4'."
-  
+  printf "\n\n------------------------------\n"
+  printf "\tTo register the TerraMA2 as a service enter the 'terrama2' user password.\n"
+  printf "\tIf you didn't have a 'terrama2' user the password is 'terrama4'.\n\n"
+
   sudo -H -u terrama2 sudo pm2 start npm --name webapp -- start
-  valid $? "Error executing webapp."
+  valid $? "Error registering webapp."
   sudo -H -u terrama2 sudo pm2 save
   valid $? "Error saving pm2 state."
-  exit
 )
 
 # Add webmonitor to pm2 startup
@@ -110,12 +108,11 @@ fi
   )
 
   sudo -H -u terrama2 sudo pm2 start npm --name webmonitor -- start
-  valid $? "Error executing webmonitor."
+  valid $? "Error registering webmonitor."
   sudo -H -u terrama2 sudo pm2 save
   valid $? "Error saving pm2 state."
-  exit
 )
 
-echo "End post-installation script..."
+printf "End post-installation script...\n\n"
 
 exit 0
