fix last commit

--- a/scripts/postinst.in
+++ b/scripts/postinst.in
@@ -70,11 +70,12 @@ fi
 # Create a terrama2 user
 # and default data folder
 (
-  adduser --system --no-create-home terrama2 sudo
+  adduser --system --no-create-home terrama2
   if [ $? -eq 0 ]; then
     # new user created
     # setting new password
     echo terrama2:terrama4 | chpasswd
+    sudo usermod -a -G sudo terrama2
   fi
 
   mkdir -p /var/lib/terrama2/data
