--- a/webapp/config/sample_webapp.json
+++ b/webapp/config/sample_webapp.json
@@ -6,6 +6,7 @@
     "defaultExecutablePath": "/opt/terrama2/4.0.0/bin",
     "defaultExecutableName": "terrama2_service",
     "disablePDF": true,
+    "debug": false,
     "OGR2OGR": "ogr2ogr",
     "db": {
       "username": "postgres",
