creating shapefile importation

--- a/webapp/config/sample_webapp.json
+++ b/webapp/config/sample_webapp.json
@@ -8,6 +8,7 @@
     "disablePDF": true,
     "debug": true,
     "OGR2OGR": "ogr2ogr",
+    "SHP2PGSQL": "shp2pgsql",
     "db": {
       "username": "postgres",
       "password": "postgres",
