--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -35,7 +35,8 @@
     "angular-eonasdan-datetimepicker": "^0.3.8",
     "almond": "^0.3.3",
     "angular-ui-select": "^0.19.6",
-    "angular-material": "^1.1.4"
+    "angular-material": "^1.1.4",
+    "ng-file-upload": "^12.2.13"
   },
   "resolutions": {
     "angular": ">= 1.5.8"
