--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "child_process": "^1.0.2",
     "clone": "^2.1.1",
     "connect-flash": "^0.1.1",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -54,6 +55,7 @@
     "socket.io-client": "^1.7.2",
     "ssh2": "^0.5.0",
     "swig": "1.4.2",
+    "unzip": "^0.1.11",
     "winston": "^2.3.0"
   }
 }
