--- a/webcomponents/package.json
+++ b/webcomponents/package.json
@@ -2,6 +2,9 @@
   "name": "TerraMA2WebComponents",
   "version": "4.0.0-rc2",
   "private": true,
+  "scripts": {
+    "grunt": "grunt"
+  },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-banner": "^0.6.0",
