--- a/webmonitor/package.json
+++ b/webmonitor/package.json
@@ -3,7 +3,9 @@
   "version": "4.0.0-rc2",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "bower": "bower",
+    "grunt": "grunt"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
