--- a/webmonitor/bower.json
+++ b/webmonitor/bower.json
@@ -22,6 +22,7 @@
     "jquery-ui": "^1.12.1",
     "moment": "^2.15.1",
     "bootstrap-daterangepicker": "^2.1.24",
-    "almond": "^0.3.3"
+    "almond": "^0.3.3",
+    "malihu-custom-scrollbar-plugin": "^3.1.5"
   }
 }
