--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -36,7 +36,8 @@
     "almond": "^0.3.3",
     "angular-ui-select": "^0.19.6",
     "angular-material": "^1.1.4",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-sortable-view": "^0.0.15"
   },
   "resolutions": {
     "angular": ">= 1.5.8"
