Fix Dockerfile - ubuntu14.04

--- a/docker/ubuntu-14.04/Dockerfile
+++ b/docker/ubuntu-14.04/Dockerfile
@@ -1,7 +1,16 @@
 FROM ubuntu:14.04
 
-VOLUME /opt/terrama2/4.0.0
-VOLUME /opt/geoserver
+############################################################################
+# Port Binding
+
+# PostgreSQL
+EXPOSE 5432
+# GeoServer
+EXPOSE 8080
+# TerraMA² WebApp
+EXPOSE 36000
+# TerraMA² WebMonitor
+EXPOSE 36001
 
 ############################################################################
 # Customizable Variables
@@ -55,20 +64,6 @@ RUN groupadd $TERRAMA2_USER && \
 ############################################################################
 # Dependencies
 
-# VMime
-RUN cd ${TERRAMA2_CODEBASE_PATH} && \
-    git clone https://github.com/terrama2/terrama2.git ${TERRAMA2_CODEBASE_PATH} && \
-    cd packages/debian-package && \
-    curl -LO https://github.com/kisli/vmime/archive/v0.9.2.tar.gz && \
-    ./deb-vmime.sh && \
-    dpkg -i terrama2-vmime_0.9.2-ubuntu14.04_amd64.deb && \
-    apt-get install -f -y
-    # rm -rf terrama2-vmime_0.9.2-ubuntu14.04_amd64* v*
-
-# NodeJS
-RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
-    apt-get install -y nodejs
-
 # TerraLib
 RUN cd ${TERRAMA2_3RDPARTY_PATH} && \
     curl -o terralib-5.2.3-ubuntu-14.04.tar.gz -L http://www.dpi.inpe.br/terralib5/download/download.php?FileName=terralib-5.2.3-ubuntu-14.04.tar.gz && \
@@ -87,6 +82,20 @@ RUN cd ${TERRAMA2_3RDPARTY_PATH} && \
     unzip -q geoserver-2.12.0-bin.zip && \
     mv geoserver-2.12.0 ${GEOSERVER_HOME} && \
     rm -rf geoserver-2.12.0-bin.zip
+
+# NodeJS
+RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
+    apt-get install -y nodejs
+
+# VMime
+RUN cd ${TERRAMA2_CODEBASE_PATH} && \
+    git clone https://github.com/terrama2/terrama2.git ${TERRAMA2_CODEBASE_PATH} && \
+    cd packages/debian-package && \
+    curl -LO https://github.com/kisli/vmime/archive/v0.9.2.tar.gz && \
+    ./deb-vmime.sh && \
+    dpkg -i terrama2-vmime_0.9.2-ubuntu14.04_amd64.deb && \
+    apt-get install -f -y
+    # rm -rf terrama2-vmime_0.9.2-ubuntu14.04_amd64* v*
 
 ############################################################################
 # TerraMA2
