--- a/websql/package.json
+++ b/websql/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.5.7",
     "express": "^4.15.5",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
