--- a/docker/webmonitor/Dockerfile
+++ b/docker/webmonitor/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker_terrama2
 
-EXPOSE 36000
+EXPOSE 36001
 
 COPY docker-entrypoint.sh /
 
-ENTRYPOINT [ "/docker-entrypoint.sh" ]
+ENTRYPOINT /docker-entrypoint.sh
