--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "data:/data"
   # TerraMA2 Web Monitor
   webmonitor:
-    image: docker_terrama2
+    build: webapp
     ports:
       - "36001:36001"
     depends_on:
@@ -40,7 +40,10 @@ services:
   # TerraMA2 Collector Service using TerraMA2 Base
   collector:
     image: docker_terrama2
-    command: ["start_terrama2_service.sh", "COLLECTOR", "6543"]
+    entrypoint: 
+      - terrama2_service
+      - COLLECTOR
+      - "6543"
     environment:
       - DISPLAY=$DISPLAY
     depends_on:
@@ -51,7 +54,10 @@ services:
   # TerraMA2 Analysis Service using TerraMA2 Base
   analysis:
     image: docker_terrama2
-    command: ["start_terrama2_service.sh", "ANALYSIS", "6544"]
+    entrypoint: 
+      - terrama2_service
+      - ANALYSIS
+      - "6544"
     environment:
       - DISPLAY=$DISPLAY
     depends_on:
@@ -62,7 +68,10 @@ services:
   # TerraMA2 View Service using TerraMA2 Base
   view:
     image: docker_terrama2
-    command: ["start_terrama2_service.sh", "VIEW", "6545"]
+    entrypoint: 
+      - terrama2_service
+      - VIEW
+      - "6545"
     environment:
       - DISPLAY=$DISPLAY
     depends_on:
@@ -73,7 +82,10 @@ services:
   # TerraMA2 Alert Service using TerraMA2 Base
   alert:
     image: docker_terrama2
-    command: ["start_terrama2_service.sh", "ALERT", "6546"]
+    entrypoint: 
+      - terrama2_service
+      - ALERT
+      - "6546"
     environment:
       - DISPLAY=$DISPLAY
     depends_on:
